Moved "full density meter" icon arrow to the right.
# 0.00.45 (65376) Jun 21, 2012
# 0.00.44 (65375) Jun 21, 2012
# 0.00.43 (65372) Jun 21, 2012
Tools are moved back into the toolbox when they are not visible on the screen after zooming in
Added density-sensor dial "highlight" band
# 0.00.42 (64996) Jun 12, 2012
Added inertia to the dial for the "single-dial" density meter
Dials swapped for the two-dial density meter
Added developer option to switch between both types of density meters
Increased label font sizes
# 0.00.41 (64769) Jun 7, 2012
"Young Oceanic Crust" label appears in continental divergence case when there is room
Fixed boundary-label overlay over subducting crust (or other intersection issues)
Mantle label pushed down in continental collision cases
Non-divergent crust / lithosphere labels made stationary
Added "boundary" labeling between mantle and lithosphere.
Density sensor now will read out correct land / water density values when positioned over the earth "top" i.e. water surface or earth surface.
# 0.00.40 (64654) Jun 5, 2012
Changed density meter to have smaller "sensitive" dial and larger "less sensitive" dial (experimental)
# 0.00.39 (64652) Jun 4, 2012
Added density "roll-over" style with miniature density meters
Fixed mantle and core density scale to realistic values (was just a constant for mantle density)
Moved ruler units label to work around layout issue
# 0.00.38 (64551) May 31, 2012
Thermometer "roll-over" style changes (larger, and to the side)
# 0.00.37 (64541) May 31, 2012
Integration of same-thread Piccolo rendering for tools so they don't lag by multiple frames
Fixed multiple bugs with the thermometer node and the "mini" thermometers
Fixed temperature model for the 1st (crust) tab
Initial mini-thermometers shown to scale, but with threading issues
Added initial version of thermometer wrapping, rewrote temperature handling
Added in the correct radial mapping inverse for sensors, so they function normally when zoomed out